--- a/styles/sass/abstracts/mixins/_common-mixins.sass
+++ b/styles/sass/abstracts/mixins/_common-mixins.sass
@@ -140,3 +140,17 @@
         border: 1px solid $bgc-subsidiary-hilight
     >svg
         display: block
+
+@mixin Loader($color: $bgc-subsidiary, $match-color: $bgc-default)
+    &.loader
+        border: 10px solid $match-color
+        border-top: 10px solid $color
+        border-radius: 50%
+        width: 50px
+        height: 50px
+        animation: spin 2s linear infinite
+    @keyframes spin 
+        0% 
+            transform: rotate(0deg)
+        100% 
+            transform: rotate(360deg)
